# mise

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  pixi.toml  subagent-prompt.txt
.github/actions/discover/: README.md  action.yml
.github/actions/lock-check/: action.yml
.github/actions/recipes-pr/: README.md  action.yml
.github/actions/release/: README.md  action.yml
.github/actions/release/release-tooling/: package.json
.github/actions/setup/: README.md  action.yml
.github/actions/test/: README.md  action.yml
.github/scripts/: discover_packages.py
.github/workflows/: ci-test.yml  release.yml  test.yml  update-major-tag.yml
src/: cli.rs  gh.rs  lib.rs  main.rs  process.rs  repo.rs  types.rs
src/commands/: build.rs  build_recipes.rs  bump.rs  matrix.rs  mod.rs  snapshot.rs
src/commands/ci/: build.rs  bump_pixi.rs  lock_check.rs  mod.rs  packages.rs  pin_siblings.rs  pixi_meta.rs  recipes_pr.rs  recipes_upsert.rs  release.rs  siblings.rs  sync_cargo.rs  test.rs  verify_siblings.rs
tests/: cli_smoke.rs  internal_action_refs.rs
tests/fixtures/: deepstream-recipes.yaml  deepstream-variants.yaml  event_pull_request.json  event_push.json  pixi_native_packages.yaml
tests/fixtures/ci/: pixi.toml
